--- a/css/base.css
+++ b/css/base.css
@@ -11,7 +11,7 @@
 body {
 	margin: 0;
 	--color-text: #111;
-	--color-bg: #fff;
+	--color-bg: rgb(251, 255, 0);
 	--color-link: #aaa;
 	--color-link-hover: #000;
 	color: var(--color-text);
